--- a/web/assets/scss/components/_filters.scss
+++ b/web/assets/scss/components/_filters.scss
@@ -40,6 +40,10 @@ body.nav-stuck {
     background: $white;
     z-index: 10;
     border-bottom: 1px solid $concrete-light;
+    &.active {
+      max-height: 100%;
+      overflow-y: auto;
+    }
   }
 
   // Hide mobile-filters once the sidebar shows up
