--- a/web/assets/scss/components/_filters.scss
+++ b/web/assets/scss/components/_filters.scss
@@ -41,6 +41,7 @@ body.nav-stuck {
     z-index: 10;
     border-bottom: 1px solid $concrete-light;
     &.active {
+      -webkit-overflow-scrolling: touch;
       bottom: 0;
       overflow-y: auto;
     }
