allow tall images in single project view, ensure landscape-sized images in related-posts blocks, remove various unused classes, single column mobile filters on people pages, remove $black bg on masonry-grid

--- a/templates/about/awards/index.html
+++ b/templates/about/awards/index.html
@@ -14,7 +14,7 @@
     </div>
   </div>
 
-  <div class="award-table margin-bottom">
+  <div class="award-table">
     <table class="sortable">
       <thead>
         <th>Awards &amp; Recognitions <svg class="icon icon-down-arrow"><use xlink:href="#icon-down-arrow" /></svg></th>
