--- a/templates/partials/_related-projects.html
+++ b/templates/partials/_related-projects.html
@@ -1,16 +1,18 @@
 {% if relatedProjects|length %}
-  <div class="row -single margin-top">
-    <div class="row-block">
-      <div class="module text-module ">
-        <h2 class="font-h2">{{ relatedProjectsTitle ?? 'Related Projects' }}</h2>
+  <section id="related-projects" class="margin-vertical related-posts">
+    <div class="row -single margin-top">
+      <div class="row-block">
+        <div class="module text-module ">
+          <h2 class="font-h2">{{ relatedProjectsTitle ?? 'Related Projects' }}</h2>
+        </div>
       </div>
     </div>
-  </div>
-  <ul class="row -halves semantic-only-list background-gray">
-    {% for project in relatedProjects %}
-      <li class="row-block">
-        {% include 'projects/_article' %}
-      </li>
-    {% endfor %}
-  </ul>
+    <ul class="row -halves semantic-only-list background-gray">
+      {% for project in relatedProjects %}
+        <li class="row-block">
+          {% include 'projects/_article' %}
+        </li>
+      {% endfor %}
+    </ul>
+  </section>
 {% endif %}
