--- a/templates/services/index.html
+++ b/templates/services/index.html
@@ -20,7 +20,7 @@
 
   <section id="services">
     <!-- services -quarters -->
-    <ul class="row -quarters photo-row-separators semantic-only-list  big-margin-bottom">
+    <ul class="row -quarters photo-row-separators semantic-only-list">
     {% for service in craft.categories.group('services').all() %}
       <li class="row-block">
         {% include 'services/_article' %}
