proper margins on 404 page

--- a/templates/404.html
+++ b/templates/404.html
@@ -3,5 +3,11 @@
 {% set bodyId = "fourohfour-page" %}
 
 {% block content %}
-<h1>We can't find what you're looking for.</h1>
+  <div class="row -full">
+    <div class="row-block">
+      <div class="module text-module">
+          <h1>We can't find what you're looking for.</h1>
+      </div>
+    </div>
+  </div>
 {% endblock %}
