typo on disableBodyScroll call, make text-module have white bg so masonry-grid can have black bg

--- a/web/assets/scss/components/_media-blocks.scss
+++ b/web/assets/scss/components/_media-blocks.scss
@@ -261,6 +261,10 @@
     }
   }
 }
+// Give text-modules inside a masonry area white bg
+.masonry-item .text-module {
+  background: $white;
+}
 
 // Quote Carousel
 // Blockquotes currently use a negative-margin with compensatory padding to create hanging quotes.  In the carousel that will effect sizing, so we remove the negative margin and instead adjust the module padding
