several disableScrollBody fixes, wait 250ms before triggering on filters opening, remove underline on utility nav hovers, force project index pages to always have grid at top instead of allMasonry to avoid conflict with new filter dropdown

--- a/templates/projects/_article.html
+++ b/templates/projects/_article.html
@@ -1,6 +1,6 @@
 {% set projectImage = project.projectImage[0] ?? null %}
 
-{% set projectAspectRatio = projectImage ?
+{% set projectAspectRatio = forceLandscape is not defined and projectImage ?
   (projectImage.getWidth() > projectImage.getHeight() ? 'landscape' : 'portrait') :
   'landscape' %}
 
