add Refresh from Deltek support for People and Impact, only populate body fields for People/Impact if adding new entry or refreshing from deltek, add new console command deltek-importer/index-new-images, add method to parse text file of newly-imported photos and add them to Craft Asset Index, remove links to Asset Indexer on AEI plugin pages

--- a/plugins/aei/src/templates/index.twig
+++ b/plugins/aei/src/templates/index.twig
@@ -26,14 +26,14 @@
     <div class="buttons">
         <a href="{{ url('aei/logs') }}" class="btn submit">{{ "View Logs"|t('aei') }}</a>
         <a href="/admin/settings/plugins/aei" class="btn submit">{{ "Settings"|t('aei') }}</a>
-        <a href="/admin/utilities/asset-indexes" class="btn submit">{{ "Asset Indexes"|t('aei') }}</a>
+        {# <a href="/admin/utilities/asset-indexes" class="btn submit">{{ "Asset Indexes"|t('aei') }}</a> #}
     </div>
 {% endblock %}
 
 {# The content of the CP Section#}
 {% block content %}
     <h2>{{ "Deltek Import"|t('aei') }}</h2>
-    <p class="textline">This runs every night as an automated cronjob, but you can also run it manually here.</p>
+    <p class="textline">This runs frequently as an automated cronjob, but you can also run it manually here.</p>
     <form method="post" id="deltek-import-form" action="/admin/actions/aei/deltek-import/import-records">
         {{ csrfInput() }}
         <div class="field">
