--- a/plugins/aei/src/templates/logs.twig
+++ b/plugins/aei/src/templates/logs.twig
@@ -26,7 +26,7 @@
     <div class="buttons">
         <a href="{{ url('aei') }}" class="btn submit">{{ "Importer"|t('aei') }}</a>
         <a href="/admin/settings/plugins/aei" class="btn submit">{{ "Settings"|t('aei') }}</a>
-        <a href="/admin/utilities/asset-indexes" class="btn submit">{{ "Asset Indexes"|t('aei') }}</a>
+        {# <a href="/admin/utilities/asset-indexes" class="btn submit">{{ "Asset Indexes"|t('aei') }}</a> #}
     </div>
 {% endblock %}
 
