--- a/plugins/aei/src/templates/settings.twig
+++ b/plugins/aei/src/templates/settings.twig
@@ -16,7 +16,7 @@
 {% import "_includes/forms" as forms %}
 
 <h2>Deltek Import Sections</h2>
-<p>Select which sections get imported every night:</p>
+<p>Select which sections get imported regularly:</p>
 
 <ul>
 {% for section in ['Awards', 'Projects', 'People', 'Offices', 'Impact'] %}
