more help text on deltek import page in CP, fix populating mediablocks and impactimage for new impact posts

--- a/plugins/aei/src/templates/index.twig
+++ b/plugins/aei/src/templates/index.twig
@@ -65,7 +65,7 @@
           <div class="heading">
             <label><input type="checkbox" name="import-mode" value="refresh"> Refresh From Deltek</label>
             <div class="instructions">
-              <p>If checked, will add new media blocks for existing unpublished projects & impact posts, or drafts of existing posts</p>
+              <p>If checked, will add new media blocks for existing unpublished (or drafts of) projects & impact posts, and update body fields for impact, people & offices</p>
             </div>
           </div>
         </div>
