--- a/templates/offices/_entry.html
+++ b/templates/offices/_entry.html
@@ -50,9 +50,9 @@
         </div>
       </div>
       <div class="row-block">
-        <div class="meta  ">
+        <div class="meta">
           {% if entry.officeAddress1 %}
-            <div class="meta-item -full">
+            <div class="meta-item -half {% set nHalf = nHalf ?? 0 + 1  %}{{ cycle (['-row-end',''], nHalf) }}">
               <h3>Address</h3>
               <address class="content">
                 {% if entry.officeMapUrl %}<a target="_blank" href="{{ entry.officeMapUrl }}">{% endif %}
