include search form on 404 page

--- a/templates/404.html
+++ b/templates/404.html
@@ -7,6 +7,7 @@
     <div class="row-block">
       <div class="module text-module">
           <h1>We can't find what you're looking for.</h1>
+          {% include 'partials/_search-form' %}
       </div>
     </div>
   </div>
