--- a/templates/search/index.html
+++ b/templates/search/index.html
@@ -5,14 +5,7 @@
 {% block content %}
 
   {% if not craft.app.request.isAjax %}
-  <form action="{{ url('search') }}" class="search-form">
-      <input autocomplete="off" autocorrect="off" autocapitalize="off" spellcheck="false" type="search" value="{{ query ? query : '' }}" name="q" class="search-field form-control" placeholder="Search" required="">
-      <button type="submit" class="button">
-        <span class="border"></span><span class="extra-corners"></span>
-        Search
-        <svg class="icon icon-search"><use xlink:href="#icon-search" /></svg>
-      </button>
-  </form>
+    {% include 'partials/_search-form' %}
   {% endif %}
 
   {% if query %}
