--- a/templates/partials/_header.html
+++ b/templates/partials/_header.html
@@ -11,7 +11,7 @@
   <nav class="site-nav">
     <ul class="secondary-links links-block">
       {% if entry is defined and entry.isEditable() %}
-        <li class="secondary-links-item edit-link"><a href="{{ entry.cpEditUrl }}">Edit Entry</a></li>
+        <li class="secondary-links-item edit-link"><a href="{{ entry.cpEditUrl ~ '?redirect=' ~ craft.app.request.getUrl()|url_encode }}">Edit Entry</a></li>
       {% endif %}
       <li class="{{ active('/about/', 'url', 'current') }}">
         <a href="/about/">About</a>
