--- a/templates/partials/_seo.html
+++ b/templates/partials/_seo.html
@@ -1,21 +1,23 @@
-{%- if seo is not defined and entry is defined and entry["seo"] is defined and entry.seo is iterable %}
-  {% set seo = entry.seo %}
-{% endif %}
-{%- if seo is not defined or seo is null or seo.title == "" %}
+{% set seo = getSeoField() %}
+{% if seo is null or seo.title == '' %}
   {% set seo = craft.seo.custom(siteName, '', false) %}
 {% endif -%}
-{% set social = craft.seo.social(seo) %}
+
 {% set locale = craft.app.locale %}
 {% set locales = craft.app.i18n.siteLocaleIds|without(locale) %}
+
+{# custom firebelly seo_image var can be set in templates #}
 {%- if seo_image is not defined %}
   {% set seo_image = '' %}
 {% endif %}
 
+{# custom firebelly title var can be set in templates #}
   <title>{% if title is defined %}{{ title }} | {{ siteName }}{% else %}{{ seo.title }}{% endif %}</title>
+{# custom firebelly seo_description var can be set in templates #}
   <meta name="description" content="{% if seo_description is defined and seo_description != '' %}{{ seo_description }}{% else %}{{ seo.description }}{% endif %}" />
 
-  {% set fb = social.facebook -%}
-  <meta property="fb:app_id" content="323796168167088">
+  {% set fb = seo.social.facebook -%}
+  <meta property="fb:app_id" content="{{ fb.handle }}">
   <meta property="og:url" content="{{ craft.app.request.absoluteUrl }}" />
   <meta property="og:type" content="website" />
   <meta property="og:title" content="{{ fb.title }}" />
@@ -27,9 +29,9 @@
     <meta property="og:locale:alternate" content="{{ locale }}" />
   {% endfor %}
 
-  {% set tw = social.twitter -%}
+  {% set tw = seo.social.twitter -%}
   <meta name="twitter:card" content="summary_large_image" />
-  <meta name="twitter:site" content="AEITweets" />
+  <meta name="twitter:site" content="{{ tw.handle }}" />
   <meta name="twitter:url" content="{{ craft.app.request.absoluteUrl }}" />
   <meta name="twitter:title" content="{{ tw.title }}" />
   <meta name="twitter:description" content="{% if seo_description is defined and seo_description != '' %}{{ seo_description }}{% else %}{{ tw.description }}{% endif %}" />
