don't fade in modal search results unless on desktop, clear query on modal search form

--- a/templates/_layout.html
+++ b/templates/_layout.html
@@ -23,6 +23,6 @@
       </div>
     </div>
 
-    {% include '/partials/_search' %}
+    {% include '/partials/_search' with { 'query': '' } %}
   </body>
 </html>
