change html comments to twig comments

--- a/templates/news/_entry.html
+++ b/templates/news/_entry.html
@@ -32,7 +32,7 @@
       }
     %}
 
-    <!-- intro -->
+    {# intro #}
     <div class="row -halves -spaced content-blocks">
       <div class="row-block top-overlap-p">
         <div class="page-intro module text-module background-white text-black">
