--- a/templates/people/index.html
+++ b/templates/people/index.html
@@ -46,7 +46,7 @@
 
 {% block content %}
 
-  <!-- header w/ stat -->
+  {# header w/ stat #}
   <div class="row -halves">
     <div class="row-block">
       <div class="module text-module  ">
@@ -90,7 +90,7 @@
     </div>
   </div>
 
-  <!-- people -quarters -->
+  {# people -quarters #}
   <section id="people">
     <ul class="row -quarters photo-row-separators semantic-only-list infinite-scroll-container">
       {% for person in peopleEntries %}
