--- a/templates/projects/_entry.html
+++ b/templates/projects/_entry.html
@@ -34,7 +34,7 @@
       }
     %}
 
-    <!-- intro -->
+    {# intro #}
     <div class="row -halves content-blocks -spaced">
       <div class="row-block top-overlap-{{ entry.projectTagline ? 'h1' : 'p' }}">
         <div class="page-intro module text-module background-white text-black">
