--- a/templates/services/_entry.html
+++ b/templates/services/_entry.html
@@ -32,7 +32,7 @@
       }
     %}
 
-    <!-- intro -->
+    {# intro #}
     {% if category.body|striptags|trim != '' %}
       <div class="row -halves secondary-page-intro">
         <div class="row-block top-overlap-p">
