--- a/templates/services/index.html
+++ b/templates/services/index.html
@@ -19,7 +19,7 @@
   {% endfor %}
 
   <section id="services">
-    <!-- services -quarters -->
+    {# services -quarters #}
     <ul class="row -quarters photo-row-separators semantic-only-list">
     {% for service in craft.categories.group('services').all() %}
       <li class="row-block">
