--- a/templates/partials/_theater-header.html
+++ b/templates/partials/_theater-header.html
@@ -7,7 +7,7 @@
 {% set headerImage = pageHeader.headerImage.one() %}
 {% set videoButton = pageHeader.headerVideo ? '<button class="button -solid theater-play text-white background-red absolute-center">Play Video<svg class="icon icon-triangle"><use xlink:href="#icon-triangle" /></svg></button>' : '' %}
 
-<!-- checkerboard header w/ optional theater -->
+{#  checkerboard header w/ optional theater  #}
 <div class="theater-header theater-wrap -closed">
   <div class="row -halves theater-cover-top">
     <div class="row-block">
