--- a/templates/people/_entry.html
+++ b/templates/people/_entry.html
@@ -26,7 +26,7 @@
 
 {% block content %}
 
-    <!-- header -->
+    {# header #}
     <div class="hero-wrap">
       <div class="hero-image image-wrap">
         {% if treatedImage %}
