add -multiple class to quote modules and hide overflow on those to fix single office quotes not showing

--- a/templates/partials/media-blocks/_quotes.html
+++ b/templates/partials/media-blocks/_quotes.html
@@ -1,4 +1,4 @@
-<div class="module quotes-module">
+<div class="module quotes-module{{ block.quotes|length > 1 ? ' -multiple' : '' }}">
   <div class="quote-carousel -unslicked">
     {% for row in block.quotes.all() %}
       <blockquote>
