--- a/templates/partials/_header.html
+++ b/templates/partials/_header.html
@@ -1,4 +1,4 @@
-<header id="sticky-header" class="site-header" role="banner">
+<header id="sticky-header" class="site-header">
   <div class="lockup-block">
     <a class="lockup" href="/">
       <div class="affiliated-engineers">
