--- a/templates/partials/media-blocks/_image.html
+++ b/templates/partials/media-blocks/_image.html
@@ -15,7 +15,7 @@
   {% if block.caption %}
     <div class="caption -right font-captions">
       <svg class="icon icon-up-arrow"><use xlink:href="#icon-up-arrow" /></svg>
-      <p div class="no-margin">{{ block.caption }}</p>
+      <p class="no-margin">{{ block.caption }}</p>
     </div>
   {% endif %}
 </div>
