--- a/templates/partials/_footer.html
+++ b/templates/partials/_footer.html
@@ -1,4 +1,4 @@
-<footer class="site-footer" role="contentinfo">
+<footer class="site-footer">
   <div class="wrapper">
     <div class="social footer-block">
       <ul class="social-list">
