--- a/templates/partials/media-blocks/_video.html
+++ b/templates/partials/media-blocks/_video.html
@@ -30,7 +30,7 @@
   {% if block.caption %}
     <div class="caption -right font-captions theater-cover-bottom">
       <svg class="icon icon-up-arrow"><use xlink:href="#icon-up-arrow" /></svg>
-      <p div class="no-margin">{{ block.caption }}</p>
+      <p class="no-margin">{{ block.caption }}</p>
     </div>
   {% endif %}
 </div>
