more header changes, change stat to div instead of article, fix IE11 issue of footer overlaying header by applying flex: 1 1 auto

--- a/web/assets/scss/components/_layout.scss
+++ b/web/assets/scss/components/_layout.scss
@@ -16,8 +16,9 @@
     position: relative;
     flex-direction: column;
 
+    .site-footer,
     .site-main {
-      flex: 1;
+      flex: 1 1 auto;
       @include clearfix;
     }
   }
