--- a/templates/partials/media-blocks/_stat.html
+++ b/templates/partials/media-blocks/_stat.html
@@ -5,7 +5,7 @@
 
 {% if block.statFigure2 %}
 
-  <article class="module stat-two-figure-module tie-fit-figures">
+  <div class="module stat-two-figure-module tie-fit-figures">
     <div class="slash-wrap">
       <div class="figure figure-1">
         <div class="fit-figure-container">
@@ -18,11 +18,11 @@
         </div>
       </div>
     </div>
-  </article>
+  </div>
 
 {% else %}
 
-  <article class="module stat-module">
+  <div class="module stat-module">
     <div class="stat-one-figure-wrap">
       <div class="figure fit-figure-container">
         <span class="fit-figure">
@@ -34,6 +34,6 @@
         <div class="text-wrap">{{ block.statLabel }}</div>
       </div>
     </div>
-  </article>
+  </div>
 
 {% endif %}
