fix article grid styling of h2/h3 after demoting header sizes

--- a/web/assets/scss/components/_articles.scss
+++ b/web/assets/scss/components/_articles.scss
@@ -88,18 +88,19 @@
     padding: 0;
   }
 
-  h1, h2 {
+  h2,
+  h3 {
     @include font-smoothing;
     margin: 0;
     z-index: 2;
     position: relative;
   }
 
-  h1 {
+  h2 {
     @include font-p;
   }
 
-  h2 {
+  h3 {
     padding-top: 3px;
     @include font-details;
   }
