specify all flex attributes on article lists for IE11, switch from min-height to height: 100% for IE11

--- a/web/assets/scss/components/_articles.scss
+++ b/web/assets/scss/components/_articles.scss
@@ -118,8 +118,11 @@
   .project-module {
     display: flex;
     flex-direction: column;
+    .image-wrap {
+      flex: 0 1 auto;
+    }
     .project-title {
-      flex-grow: 1;
+      flex: 1 1 auto;
     }
   }
 }
