--- a/templates/offices/_article.html
+++ b/templates/offices/_article.html
@@ -1,6 +1,6 @@
 <article class="module office-module zoom-hover bigclicky">
   <div class="image-wrap -square">
-    {% set image = office.officeImage.one() %}
+    {% set image = entry.officeImage.one() %}
     {% if image %}
       {% set treatedImage = craft.imager.transformImage(image, { width: 800 }) %}
       {% if treatedImage %}
@@ -9,6 +9,9 @@
     {% endif %}
   </div>
   <div class="text pad">
-    <h1 class="name font-p no-margin"><a href="{{ office.getUrl() }}">{{ office.title }}</a></h1>
+    <h1 class="name font-p no-margin"><a href="{{ entry.getUrl() }}">{{ entry.title }}</a></h1>
+    {% if entry.phoneNumber %}
+      <p class="font-captions">{{ entry.phoneNumber }}</p>
+    {% endif %}
   </div>
 </article>
