change only project articles to height: 100%

--- a/web/assets/scss/components/_articles.scss
+++ b/web/assets/scss/components/_articles.scss
@@ -118,6 +118,7 @@
   .project-module {
     display: flex;
     flex-direction: column;
+    height: 100%;
     .image-wrap {
       flex: 0 1 auto;
     }
