match style of office subtitles from people

--- a/templates/people/_article.html
+++ b/templates/people/_article.html
@@ -11,6 +11,6 @@
   </div>
   <div class="text pad">
     <h2 class="name font-p no-margin"><a href="{{ person.getUrl() }}" class="no-underline">{{ person.title }}</a></h2>
-    <h3 class="title font-details">{{ (personTitleOverride ?? null) ? personTitleOverride : person.personTitle }}</h3>
+    <h3 class="subtitle font-details">{{ (personTitleOverride ?? null) ? personTitleOverride : person.personTitle }}</h3>
   </div>
 </article>
