--- a/web/assets/scss/components/_articles.scss
+++ b/web/assets/scss/components/_articles.scss
@@ -174,9 +174,9 @@
   color: $white;
 }
 
-// Person Articles
-.person-module {
-  .title {
+// Articles with subtitles (e.g. people, offices)
+.module {
+  .subtitle {
     margin: 6px 0 0;
   }
 }
