--- a/templates/offices/_article.html
+++ b/templates/offices/_article.html
@@ -9,9 +9,9 @@
     {% endif %}
   </div>
   <div class="text pad">
-    <h1 class="name font-p no-margin"><a href="{{ entry.getUrl() }}">{{ entry.title }}</a></h1>
+    <h2 class="name font-p no-margin"><a class="no-underline" href="{{ entry.getUrl() }}">{{ entry.title }}</a></h2>
     {% if entry.phoneNumber %}
-      <p class="font-captions">{{ entry.phoneNumber }}</p>
+      <h3 class="title font-details">{{ entry.phoneNumber }}</h3>
     {% endif %}
   </div>
 </article>
