--- a/templates/offices/_article.html
+++ b/templates/offices/_article.html
@@ -11,7 +11,7 @@
   <div class="text pad">
     <h2 class="name font-p no-margin"><a class="no-underline" href="{{ entry.getUrl() }}">{{ entry.title }}</a></h2>
     {% if entry.phoneNumber %}
-      <h3 class="title font-details">{{ entry.phoneNumber }}</h3>
+      <h3 class="subtitle font-details">{{ entry.phoneNumber }}</h3>
     {% endif %}
   </div>
 </article>
