move Search Jobs link to sidenav on careers, remove "careers" button on people header, remove office stat on people header

--- a/templates/partials/_about-nav.html
+++ b/templates/partials/_about-nav.html
@@ -2,4 +2,5 @@
 <ul class="filters semantic-only-list">
   <li class="{{ craft.app.request.fullPath == 'about/careers' ? 'current' : '' }}"><a href="/about/careers/">Careers</a></li>
   <li class="{{ craft.app.request.fullPath == 'about/awards' ? 'current' : '' }}"><a href="/about/awards/">Awards</a></li>
+  <li><a target="_blank" rel="noopener" class="external" href="https://domestic-aeieng.icims.com/">Search Jobs</a></li>
 </ul>
